--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: java
+sudo: true
 jdk:
   - openjdk7
   - oraclejdk7
   - oraclejdk8
+cache:
+  directories:
+    - $HOME/.m2
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -yqq graphviz
+  - sudo ln -s /usr/bin/dot /usr/local/bin/
